--- a/package.json
+++ b/package.json
@@ -11,10 +11,6 @@
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-redux": "^7.2.1",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "styled-components": "^5.2.0",
-    "swr": "^0.3.3"
+    "styled-components": "^5.2.0"
   }
 }
