--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "next": "9.5.3",
-    "react": "16.8.0",
-    "react-dom": "16.8.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "styled-components": "^5.2.0"
   }
 }
